macros/tests/ui/field_on_struct.stderr
error: Unsupported shape `struct`. Expected enum with no fields.
 --> tests/ui/field_on_struct.rs:3:10
  |
3 | #[derive(TryFromField)]
  |          ^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `TryFromField` (in Nightly builds, run with -Z macro-backtrace for more info)
